--- a/components/ThePageButtons.module.css
+++ b/components/ThePageButtons.module.css
@@ -5,7 +5,7 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  z-index: 13;
+  z-index: 26;
 
   border-top: 1px solid var(--green);
   background-color: var(--bg-color);
