--- a/components/TheSubNav.module.css
+++ b/components/TheSubNav.module.css
@@ -5,7 +5,7 @@
   left: 0;
   width: 100%;
   top: 0;
-  z-index: 14;
+  z-index: 27;
 
   font-family: var(--font-display);
   background: var(--text-color);
